--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,10 @@ body {
 }
 
 header {
+	z-index: 999;
 	height: 54px;
 	background: #C82606;
 	display: flex;
-	text-justify: flex-end;
     -webkit-box-shadow: 0px 1px 5px #666161;
 }
 
@@ -48,7 +48,7 @@ header #menuboton{
     font-weight: bold;
 }
 
-.menu {
+.menu {z-index: 998;
 	position: absolute;
 	top: 54px;
 	left: 0px;
@@ -97,6 +97,94 @@ header #menuboton{
 #btn-menu:checked ~ .menu{
 	transform: translateY(0%);
 }
+
+.main{
+	width: 100%;
+	max-height: 500px;
+	margin: 0px auto;
+	position: relative;
+}
+
+.slides{
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	max-height: 500px;
+}
+
+.slides img{
+	width: 100%;
+	height: 100%;
+	max-height:500px;
+}
+
+.slidesjs-pagination,
+.slidejs-navigation{
+	margin: 0;
+	padding: 0;
+	list-style:none;
+}
+
+.slidesjs-pagination{
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	bottom: 1%;
+	z-index: 800;
+}
+
+.slidesjs-pagination li{
+	display: inline-block;
+	margin: 0px 6px;
+}
+
+.slidesjs-pagination li a{
+	display: block;
+	background: white;
+	width: 6px;
+	height: 6px;
+	border-radius: 12px;
+	text-indent: -9999px;
+}
+
+.slides .active{
+	background: rgba(255, 255, 255, 0.3);
+}
+.slidesjs-pagination li a:hover{
+	background: rgba(255, 255, 255, 0.3);
+}
+
+.slidesjs-navigation {
+	color: white;
+	display: block;
+	text-decoration: none;
+	position: absolute;
+	top:45%;
+	z-index: 999;
+	opacity: 0;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out; 
+	-transition: all 0.5s ease-in-out;  
+}
+
+.slidesjs-previous{
+	left: -10px;
+}
+
+.slidesjs-next{
+	right: 10px;
+}
+
+.main:hover .slidesjs-previous{
+	opacity: 0.7;
+}
+
+.main:hover .slidesjs-next{
+	opacity: 0.7;
+}
+
+
 
 
 @media screen and (min-width: 480px){
