--- a/css/font/flaticon.css
+++ b/css/font/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 02/04/2017 10:40
+  	Creation date: 08/05/2017 07:52
   	*/
 
 @font-face {
@@ -29,7 +29,12 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-arrows-1:before { content: "\f100"; font-size: 30px;text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3)}
-.flaticon-arrows:before { content: "\f101"; font-size: 30px;text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3)}
-.flaticon-right-arrow:before { content: "\f102"; }
-.flaticon-left-arrow:before { content: "\f103"; }
+.flaticon-facebook-logo-button:before { content: "\f100"; }
+.flaticon-social-twitter-circular-button:before { content: "\f101"; }
+.flaticon-social-facebook-circular-button:before { content: "\f102"; }
+.flaticon-twitter-logo-on-black-background:before { content: "\f103"; }
+.flaticon-linkedin-button:before { content: "\f104"; }
+.flaticon-linkedin-logo:before { content: "\f105"; }
+.flaticon-social-linkedin-circular-button:before { content: "\f106"; }
+.flaticon-twitter-logo-button:before { content: "\f107"; }
+.flaticon-facebook-logotype-button:before { content: "\f108"; }
