--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,12 @@ header #menuboton{
 }
 
 .slidesjs-previous{
+	display: none;
 	left: -10px;
 }
 
 .slidesjs-next{
+	display: none;
 	right: 10px;
 }
 
@@ -184,11 +186,75 @@ header #menuboton{
 	opacity: 0.7;
 }
 
-section{
-	border: solid 1px red;
+footer {
+	background: #C82606;
 	display: inline-block;
+	width: 100%;
+}
+/*
+footer #socialmedia, footer a , footer i{
+	display: inline-block;
+	vertical-align: middle;
+}*/
+
+footer #socialmedia {
+	position: relative;
+	height: 85%;
+	width: 45%;
+	right: 35px;
+	border: solid yellow 1px;
 }
 
+.flaticon-social-twitter-circular-button::before{
+    content: "\f101";
+    color: #fff;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+.flaticon-social-facebook-circular-button::before{
+    content: "\f102";
+    color: #fff;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+.flaticon-social-linkedin-circular-button::before{
+    content: "\f106";
+    color: #fff;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+footer #btn-mail a{
+	display: none;
+	border: red solid 1px;
+	color: #fff;
+	text-decoration: none;
+
+}
+
+footer #btn-mail .material-icons{
+	cursor: pointer;
+	color: #fff;
+	font-size: 35px;
+	font-weight: bold;
+	margin: 5px auto;
+	width: 20%;
+	text-align: center;
+	position: relative;
+	left: 40%;
+}
+
+footer p{
+	position: relative;
+	display: block;
+	width: 100%;
+	font-size: 10px;
+	margin: 5px auto;
+	text-align: center;
+	color: #fff;
+}
 
 
 @media screen and (min-width: 480px){
@@ -256,5 +322,44 @@ section{
     header #menuboton{
     	display: none;
 	}
+	
+	footer #socialmedia, #btn-mail, footer p{
+		display: block;
+	}
+
+	footer #social-media{
+		height: 85%
+		width: 45%;
+		border: solid blue 1px;
+	}
+	
+	footer #btn-mail{
+		float: right;
+		height: 85%;
+		width: 45%;
+		right: 35px;
+		border: solid yellow 1px;
+	}
+
+	footer p{
+		height: 15%;
+		display: block;
+		text-align: left;
+	}
+	/*footer #btn-mail{
+		display: block;
+		position: relative;
+		right: 5px;
+	}
+
+	footer #btn-mail a{
+		display: block;
+		width: inherit;
+	}
+
+	footer #btn-mail>*{
+	display: block;
+	}*/
+
     
 }
