--- a/css/style.css
+++ b/css/style.css
@@ -193,11 +193,11 @@ footer {
 	width: 100%;
 }
 
-/*
-footer #socialmedia, footer a , footer i{
+
+/*footer #socialmedia, footer a , footer i{
 	display: inline-block;
 	vertical-align: middle;
-}*/
+}
 
 footer #socialmedia a{
 	text-decoration: none;
@@ -207,9 +207,9 @@ footer #socialmedia{
 	position: relative;
 	padding: 10px 0px 10px 0px;
 	margin: 5px;
-	/*border-bottom: solid 1px rgba(255,255,255,.5);*/
+	border-bottom: solid 1px rgba(255,255,255,.5);
 }
-/*
+
 .flaticon-social-twitter-circular-button::before,
 .flaticon-social-facebook-circular-button::before,
 .flaticon-social-linkedin-circular-button::before{
@@ -220,8 +220,8 @@ footer #socialmedia{
     margin:5px 5px;
     position: relative;
     width: 20%;
-}
-*/
+}*/
+
 footer #btn-mail{
 	padding: 25px 0px;
 	text-align: center;
@@ -346,17 +346,14 @@ footer p{
 	}
 	
 	footer #btn-mail{
-		float: right;
-		height: 85%;
 		width:100%;
-		right: 35px;
-		border: solid yellow 1px;
+		padding: 8px;
 	}
 
 	footer p{
 		height: 15%;
 		display: block;
-		text-align: left;
+		padding-top: 10px;
 	}
 	/*footer #btn-mail{
 		display: block;
