--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+
 body {
 	background: #C82606;
+	padding-top: 54px;
 }
 
 *{
@@ -10,9 +12,11 @@ body {
 
 header {
 	z-index: 999;
+	top: 0px;
 	height: 54px;
+	width: 100%;
 	background: #C82606;
-	display: flex;
+	position: fixed;
     -webkit-box-shadow: 0px 1px 5px #666161;
 }
 
@@ -48,7 +52,8 @@ header #menuboton{
     font-weight: bold;
 }
 
-.menu {z-index: 998;
+.menu {
+	z-index: 999;
 	position: absolute;
 	top: 54px;
 	left: 0px;
@@ -98,6 +103,56 @@ header #menuboton{
 #btn-menu:checked ~ .menu{
 	transform: translateY(0%);
 }
+/*
+body:nth-child(2){
+	padding-top: 54px;
+}*/
+
+#pagName{
+	background: #fff;
+	font-weight: bold;
+	font-size: 1.5em;
+	padding: 10px 5%;
+	color: #000000;
+	z-index: 1000;
+}
+
+section{
+	padding-bottom: 25px;
+	display: inline-block;
+	background: #fff;
+	margin: 0;
+    -webkit-box-shadow: 0px 2px 4px #666161;
+}
+
+
+
+section #sectionleft .sectionName{
+	font-weight: bold;
+	padding: 15px 7%;
+	color: #000000;
+	font-size: 1em;
+}
+
+section #sectionleft .sectionDesc{
+	text-align: right;
+	padding: 8px 7% 20px 7%;
+	color: #000000;
+	font-size: .9em;
+
+}
+
+section #sectionright{
+}
+
+
+section #sectionright img{
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
 
 .main{
 	width: 100%;
@@ -223,7 +278,7 @@ footer #socialmedia{
 }*/
 
 footer #btn-mail{
-	padding: 25px 0px;
+	padding: 5px 0px;
 	text-align: center;
 /*	border-bottom: solid 1px rgba(255,255,255,.5);*/	
 }
@@ -245,8 +300,7 @@ footer #btn-mail .flaticon-social-linkedin-circular-button::before{
 
 	cursor: pointer;
 	color: #fff;
-	font-size: 30px;
-	font-weight: bold;
+	font-size: 25px;
 	margin: 5px 0;
 	text-align: center;
 	position: relative;
@@ -256,7 +310,7 @@ footer #btn-mail .flaticon-social-linkedin-circular-button::before{
 
 footer p{
 	margin: 0;
-	padding: 10px 0px;
+	padding: 5px 0px;
 	position: relative;
 	display: block;
 	width: 100%;
@@ -284,18 +338,22 @@ footer p{
 
 @media screen and (min-width: 750px){
 	body{
-		background: blue;
+		background: #C82606;
 	}
 
 }
 
 @media screen and (min-width: 950px){
 	body{
-		background: peru;
+		background: #C82606;
+		padding-top: 64px;
 	}
 	header {
+		top: 0px;
+		width: 100%;
 		height: 64px;
-		position: relative;
+		position: fixed;		
+		-webkit-box-shadow: 0px 1px 5px #666161;
 	}
 
 	header #logo{
@@ -310,13 +368,16 @@ footer p{
 		height: 64px;
 	}
 	
+	header #menuboton{
+    	display: none;
+	}
+
 	.menu {
         left: 45%;
 		width: inherit;
 		top: 0;
-        transform: translateY(0%);
-        
-	}
+        transform: translateY(0%);        
+	}	
 
 	.menu ul ul a{
 		padding: 17px 30px;
@@ -334,13 +395,50 @@ footer p{
 		position: absolute;
 	}
 
-
-
-    
-    header #menuboton{
-    	display: none;
+	
+	
+	#pagName{
+		width: 50%;
+		background: #fff;
+		font-weight: bold;
+		font-size: 1.5em;
+		padding: 10px 5%;
+		color: #000000;
 	}
 	
+	body section{
+		display: inline-block;
+		background: #fff;
+	}
+
+
+
+	section #sectionleft .sectionName{
+		padding: 8px 7%;
+		color: #000000;
+		font-size: 1em;
+	}
+
+	section #sectionleft .sectionDesc{
+		text-align: right;
+		padding: 8px 7%;
+		color: #000000;
+		font-size: .9em;
+	}
+
+	section #sectionright{
+		margin: 0;
+		padding: 0;
+
+	}
+
+	section #sectionright img{
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+	}
+
 	footer #btn-mail, footer p{
 		display: block;
 	}
@@ -355,6 +453,8 @@ footer p{
 		display: block;
 		padding-top: 10px;
 	}
+
+
 	/*footer #btn-mail{
 		display: block;
 		position: relative;
