--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-	background: #C82606;
+	background: #fff;
 	padding-top: 54px;
 }
 
@@ -49,7 +49,6 @@ header #menuboton{
     right: 15px;
     top: 10px;
     color: #fff;
-    font-weight: bold;
 }
 
 .menu {
@@ -108,6 +107,17 @@ body:nth-child(2){
 	padding-top: 54px;
 }*/
 
+.cajas {
+	display: inline-block;
+	height: 150px;
+	width: 94%;
+	float: right;
+	margin: 3%;
+	-webkit-box-shadow: 0px 1px 5px #666161;
+	transition: all 0.3s;
+}
+
+
 #pagName{
 	background: #fff;
 	font-weight: bold;
@@ -139,10 +149,12 @@ section #sectionleft .sectionDesc{
 	padding: 8px 7% 20px 7%;
 	color: #000000;
 	font-size: .9em;
+	border: solid 1px yellow;
 
 }
 
 section #sectionright{
+	height: 40%;
 }
 
 
@@ -159,6 +171,7 @@ section #sectionright img{
 	max-height: 500px;
 	margin: 0px auto;
 	position: relative;
+	-webkit-box-shadow: 0px 1px 5px #666161;
 }
 
 .slides{
@@ -326,6 +339,11 @@ footer p{
 		background: green;
 	}
 
+	.cajas {
+	display: inline-block;
+	height: 200px;
+	}
+
 }
 
 
@@ -338,14 +356,18 @@ footer p{
 
 @media screen and (min-width: 750px){
 	body{
-		background: #C82606;
+		background: #fff;
 	}
 
-}
+	.cajas {
+	height: 250px;
+	width: 46%;
+	margin: 2%;
+	}	
 
 @media screen and (min-width: 950px){
 	body{
-		background: #C82606;
+		background: #fff;
 		padding-top: 64px;
 	}
 	header {
@@ -395,7 +417,11 @@ footer p{
 		position: absolute;
 	}
 
-	
+	.cajas {
+	height: 250px;
+	width: 21%;
+	margin: 2%;
+	}	
 	
 	#pagName{
 		width: 50%;
