--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ header #menuboton{
     right: 15px;
     top: 10px;
     color: #fff;
+    font-weight: bold;
 }
 
 .menu {
@@ -128,28 +129,26 @@ body:nth-child(2){
 }
 
 section{
-	padding-bottom: 25px;
+	padding-bottom: 30px;
 	display: inline-block;
-	background: #fff;
 	margin: 0;
-    -webkit-box-shadow: 0px 2px 4px #666161;
+    -webkit-box-shadow: 0px 1px 5px #666161;
 }
 
 
 
-section #sectionleft .sectionName{
+section .sectionleft .sectionName{
 	font-weight: bold;
 	padding: 15px 7%;
 	color: #000000;
 	font-size: 1em;
 }
 
-section #sectionleft .sectionDesc{
+section .sectionleft .sectionDesc{
 	text-align: right;
 	padding: 8px 7% 20px 7%;
 	color: #000000;
 	font-size: .9em;
-	border: solid 1px yellow;
 
 }
 
@@ -360,10 +359,45 @@ footer p{
 	}
 
 	.cajas {
-	height: 250px;
-	width: 46%;
-	margin: 2%;
-	}	
+		height: 250px;
+		width: 46%;
+		margin: 2%;
+	}
+
+	#pagName{
+		background: #fff;
+		font-weight: bold;
+		font-size: 1.5em;
+		padding: 10px 5%;
+		color: #000000;
+	}
+
+	section{
+		padding-bottom: 30px;
+		display: inline-block;
+		margin: 0;
+	    -webkit-box-shadow: 0px 1px 5px #666161;
+	}
+
+
+
+	section .sectionleft , section #sectionright {
+		display: inline-block;
+		height: 400px;
+		width: 46%;
+		margin: 2%;
+		float: left;
+		vertical-align: top;
+	}
+
+	section .sectionleft .sectionDesc{
+		text-align: right;
+		padding: 8px 7% 20px 7%;
+		color: #000000;
+		font-size: .9em;
+
+	}
+
 
 @media screen and (min-width: 950px){
 	body{
@@ -418,7 +452,7 @@ footer p{
 	}
 
 	.cajas {
-	height: 250px;
+	height: 350px;
 	width: 21%;
 	margin: 2%;
 	}	
@@ -437,33 +471,6 @@ footer p{
 		background: #fff;
 	}
 
-
-
-	section #sectionleft .sectionName{
-		padding: 8px 7%;
-		color: #000000;
-		font-size: 1em;
-	}
-
-	section #sectionleft .sectionDesc{
-		text-align: right;
-		padding: 8px 7%;
-		color: #000000;
-		font-size: .9em;
-	}
-
-	section #sectionright{
-		margin: 0;
-		padding: 0;
-
-	}
-
-	section #sectionright img{
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		height: 100%;
-	}
 
 	footer #btn-mail, footer p{
 		display: block;
