--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 	
-	body {
+body {
 	background : #fff;
-	}
+	padding-top: 54px;
+}
 
-	*{
+*{
 	margin    : 0;
 	padding   : 0;
 	box-sizing: border-box;
-	}
+}
+
+/*Menú de navegación*/
 
 header {
 	z-index           : 999;
@@ -28,6 +31,7 @@ header #logo img{
 	width : 54px;
 	height: 54px;
 }
+
 
 #btn-menu{
 	display: none;
@@ -51,6 +55,8 @@ header #menuboton{
 	font-weight: bold;
 }
 
+/*Items del menú principal*/
+
 .menu {
 	z-index   : 999;
 	position  : absolute;
@@ -60,7 +66,7 @@ header #menuboton{
 	transform : translateX(-100%);
 	transition: all 0.3s;
 }
-
+	
 .menu ul {
 	background: #C82606;
 	display: block;
@@ -75,6 +81,7 @@ header #menuboton{
 	display: none;
 	background: #E32E0A;
 }
+
 /*Items del sub menu*/
 
 .menu ul ul a{
@@ -103,9 +110,6 @@ header #menuboton{
 	transform: translateY(0%);
 }
 
-body:nth-child(2){
-	padding-top: 54px;
-}
 
 .cajas {
 	display: inline-block;
@@ -127,19 +131,27 @@ body:nth-child(2){
 	z-index: 1000;
 }
 
-section{
-	padding-bottom: 30px;
+body section{
+	padding-bottom: 54px;
 	margin: 0;
     -webkit-box-shadow: 0px 1px 5px #666161;
+    -moz-box-shadow: 0px 1px 5px #666161
 }
 
 
 
 section .sectionleft .sectionName{
 	font-weight: bold;
-	padding: 15px 7%;
+	padding: 10px 7%;
 	color: #000000;
 	font-size: 1em;
+}
+
+section .anclas{
+	display: block;
+	height: 54px;
+	visibility: hidden;
+	margin: 0px;
 }
 
 section .sectionName{
@@ -157,7 +169,11 @@ section .sectionleft .sectionDesc{
 
 }
 
-section #sectionright{
+section .sectionleft, section .sectionright{
+	margin: 0;
+}
+
+section .sectionright{
 	height: 40%;
 }
 
@@ -174,11 +190,23 @@ section #sectionright img{
 	width: 100%;
 }
 
-#equipo .team1, #equipo .team{
+#equipo .sectionName{
+	font-size: 20px;
 }
 
+#equipo .team1 div .perfil{
+	display: block;
+	width: 155px;
+	height: 155px;
+	border-radius: 50%;
+	background-image: url(../img/2.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin: 20px auto;
+}
 
-#equipo div div .perfil{
+#equipo .team div .perfil{
 	display: block;
 	width: 125px;
 	height: 125px;
@@ -194,7 +222,14 @@ section #sectionright img{
 	text-align: center;
 }
 
-#equipo div div p{
+#equipo .team1 div p{
+	width: 80%;
+	font-size: 17px;
+	display: inline-block;
+}
+
+#equipo .team div p{
+	font-size: 15px;
 	width: 80%;
 	display: inline-block;
 }
@@ -207,8 +242,13 @@ section #sectionright img{
 	content: "";
 }
 
-#equipo div div p a .flaticon-social-linkedin-circular-button:before {
-	font-size: 30px;
+#equipo .team1 div p a .flaticon-social-linkedin-circular-button:before {
+	font-size: 27px;
+	color: #0077B5;
+}
+
+#equipo .team div p a .flaticon-social-linkedin-circular-button:before {
+	font-size: 25px;
 	color: #0077B5;
 }
 
@@ -314,34 +354,6 @@ footer {
 }
 
 
-/*footer #socialmedia, footer a , footer i{
-	display: inline-block;
-	vertical-align: middle;
-}
-
-footer #socialmedia a{
-	text-decoration: none;
-}
-footer #socialmedia{
-	text-align: center;
-	position: relative;
-	padding: 10px 0px 10px 0px;
-	margin: 5px;
-	border-bottom: solid 1px rgba(255,255,255,.5);
-}
-
-.flaticon-social-twitter-circular-button::before,
-.flaticon-social-facebook-circular-button::before,
-.flaticon-social-linkedin-circular-button::before{
-    color: #fff;
-    font-size: 25px;
-    cursor: pointer;
-    font-weight: bold;
-    margin:5px 5px;
-    position: relative;
-    width: 20%;
-}*/
-
 footer #btn-mail{
 	padding: 5px 0px;
 	text-align: center;
@@ -388,7 +400,7 @@ footer p{
 
 @media screen and (min-width: 480px){
 	body{
-		background: #fff;
+		background: peru;
 	}
 
 	.cajas {
@@ -401,14 +413,14 @@ footer p{
 
 @media screen and (min-width: 600px){
 	body{
-		background: #fff;
+		background: green;
 	}
 
 }
 
 @media screen and (min-width: 750px){
 	body{
-		background: #fff;
+		background: blue;
 	}
 
 	.cajas {
@@ -451,11 +463,83 @@ footer p{
 
 	}
 
+	#equipo{
+	display: block;
+	width: 100%;
+	}
+
+	#equipo .sectionName{
+		font-size: 20px;
+	}
+	#equipo .team1{
+		display: block;
+		width: 90%;
+		margin: 0 auto;
+
+	}
+	#equipo .team1 div{
+		width: 24.5%;
+		margin: 2% 4%;
+		text-align: center;
+		display: inline-block;
+	}
+	
+	#equipo .team{
+		display: block;
+		width: 90%;
+		margin: 0 auto;
+	}
+
+	#equipo .team div{
+		width: 30%;
+		margin: 1.5% 1.3%;
+		display: inline-block;
+		text-align: center;
+	}
+
+
+	#equipo .team1 div p{
+		width: 80%;
+		font-size: 17px;
+		display: inline-block;
+	}
+
+	#equipo .team div p{
+		font-size: 15px;
+		width: 80%;
+		display: inline-block;
+	}
+
+	#equipo div div p a{
+		text-decoration: none;
+	}
+
+	#equipo div div p a .flaticon-social-linkedin-circular-button:after {
+		content: "";
+	}
+
+	#equipo .team1 div p a .flaticon-social-linkedin-circular-button:before {
+		font-size: 27px;
+		color: #0077B5;
+	}
+
+	#equipo .team div p a .flaticon-social-linkedin-circular-button:before {
+		font-size: 25px;
+		color: #0077B5;
+	}
+
+	#equipo div div .perfil, #equipo div div p{
+		display: inline-block;
+		vertical-align: middle;
+	}
+}
+	
+
+
 
 @media screen and (min-width: 950px){
 	body{
 		background: #fff;
-		padding-top: 64px;
 	}
 	header {
 		top: 0px;
@@ -522,7 +606,71 @@ footer p{
 	body section{
 		display: inline-block;
 		background: #fff;
+		padding-bottom: 64px;
 	}
+
+	section .anclas{
+	height: 64px;	
+	}
+
+		#equipo{
+	display: block;
+	width: 100%;
+	}
+
+	#equipo .sectionName{
+		font-size: 20px;
+	}
+
+	/*#equipo .team1 div{
+		width: 28%;
+		margin: 1% 2.5%;
+		text-align: center;
+		display: inline-block;
+	}
+*/
+	#equipo .team1 div p{
+		width: 80%;
+		font-size: 17px;
+		display: inline-block;
+	}
+	/*#equipo .team div{
+		width: 25%;
+		margin: 1% 4%;
+		text-align: center;
+		display: inline-block;
+	}*/
+
+	#equipo .team div p{
+		font-size: 15px;
+		width: 80%;
+		display: inline-block;
+	}
+
+	#equipo div div p a{
+		text-decoration: none;
+	}
+
+	#equipo div div p a .flaticon-social-linkedin-circular-button:after {
+		content: "";
+	}
+
+	#equipo .team1 div p a .flaticon-social-linkedin-circular-button:before {
+		font-size: 27px;
+		color: #0077B5;
+	}
+
+	#equipo .team div p a .flaticon-social-linkedin-circular-button:before {
+		font-size: 25px;
+		color: #0077B5;
+	}
+
+	#equipo div div .perfil, #equipo div div p{
+		display: inline-block;
+		vertical-align: middle;
+	}
+}
+	
 
 
 	footer #btn-mail, footer p{
@@ -540,21 +688,6 @@ footer p{
 		padding-top: 10px;
 	}
 
-
-	/*footer #btn-mail{
-		display: block;
-		position: relative;
-		right: 5px;
-	}
-
-	footer #btn-mail a{
-		display: block;
-		width: inherit;
-	}
-
-	footer #btn-mail>*{
-	display: block;
-	}*/
 
     
 }
